example/error/index.wxml
<!--demo/error/index.wxml-->
<view class="details">
    <view class="details-header">
        <mt-cell title="{{compTitle}}">
            <mt-icon slot="left" type="custom" name="{{compIcon}}" size="64" class="component-icon"></mt-icon>
        </mt-cell>
    </view>
    <view class="details-main">
        <view class="section section--ext">
            <view class="section-hd">
                <view class="section-hd__text">示例</view>
                <text class="section-hd__icon"></text>
            </view>
            <view class="section-bd">
                <view class="pannel">
                    <view class="pannel-hd">基础使用</view>
                    <view class="pannel-bd">
                        <mt-error
                            height="500"
                            hasBtn="{{false}}">
                        </mt-error>
                    </view>
                </view>
                <view class="pannel">
                    <view class="pannel-hd">定义图标与文本</view>
                    <view class="pannel-bd">
                        <mt-error
                            height="500"
                            icon="/example/error/images/404.png"
                            text="访问地址不存在～"
                            hasBtn="{{false}}">
                        </mt-error>
                    </view>
                </view>
                <view class="pannel">
                    <view class="pannel-hd">500页面</view>
                    <view class="pannel-bd p60">
                        <mt-button type="plain" size="m" bindtap="toPage500">演示</mt-button>
                    </view>
                </view>
                <view class="pannel">
                    <view class="pannel-hd">404页面</view>
                    <view class="pannel-bd p60">
                        <mt-button type="plain" size="m" bindtap="toPage404">演示</mt-button>
                    </view>
                </view>
                <view class="pannel">
                    <view class="pannel-hd">403页面</view>
                    <view class="pannel-bd p60">
                        <mt-button type="plain" size="m" bindtap="toPage403">演示</mt-button>
                    </view>
                </view>
                <view class="pannel">
                    <view class="pannel-hd">网络异常</view>
                    <view class="pannel-bd p60">
                        <mt-button type="plain" size="m" bindtap="toPageOffline">演示</mt-button>
                    </view>
                </view>
            </view>
        </view>
    </view>
</view>